postcss/testData/inspections/customSelectors/emptySelectorListTwoInLine.pcss
@custom-selector :--a<error descr="Custom selector at-rule should contain selector list">;</error> @custom-selector :--b<error descr="Custom selector at-rule should contain selector list">;</error>